--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <header>
                 <h1>OUR PROMISES</h1>
             </header>
-            <div class="row justify-content-center pl-2 pr-2">
+            <div class="row justify-content-center">
                 <div class="col-md-3 pb-4">
                     <img src="image/organic.png" alt="">
                 </div>
